PLAN DE MEJORA PROFESIONAL IMPLEMENTADO